--- a/_posts/2016-04-28-new.md
+++ b/_posts/2016-04-28-new.md
@@ -11,7 +11,7 @@ comments: true
 
   Eric is jewish, and he started talking about a jewish history when I asked him why european people so hated jewish people. His story was going back to the era of Jesus and he described Jesus very differently from what I had heard from christion people; I attended a christian church for a few month, and the christians said that Jesus is the savior and he sacrificed himself to unsin us. But, he said that Jesus was not a savior and it is wrong to say that jews sold him to the Rome. It was an interesting point of view, although my christian wife would've been upset if she were there (she got baptized last year). 
 
-  One interesting thing on Eric was that he had a very strong identity as being a jewish, even though  not only he was not born in Israel, but he also had not been in Islael before. He also knew a lot of history at an expert level.  I am a korean and I have also a strong identity as a korean, because I was born in South Korea and I lived there for 26 years. But I am not sure that my descendants after 10 generations would have the identity, and even I am not sure about my daughter to have the identity if we grows up in america! Jewish people are interesting.    
+  One interesting thing on Eric was that he had a very strong identity as being a jewish, even though  not only he was not born in Israel, but he also had not been in Islael before. He also knew a lot of history at an expert level.  I am a korean and I have also a strong identity as a korean, because I was born in South Korea and I lived there for 26 years. But I am not sure that my descendants after 10 generations would have the identity, and even I am not sure about my daughter to have the identity if she grows up in america! Jewish people are interesting.    
 
 
 
@@ -19,4 +19,3 @@ comments: true
 
 
   
-
