--- a/_posts/2016-05-09-003803.markdown
+++ b/_posts/2016-05-09-003803.markdown
@@ -24,8 +24,10 @@ $$\begin{eqnarray}M_3: Y_i = \beta_0 +  \beta_1 X_{ 2 i } + \beta_1 X_{ 3 i }+\e
 AIC and BIC of a model $$M$$ can be defined as
 
 
-*AIC: $$-2\hat l_M + 2\mid{M}\mid$$
-*BIC: $$-2\hat l_M + \log n \mid{M}\mid$$, 
+ $$AIC_M : -2\hat l_M + 2\mid{M}\mid$$
+
+
+  $$BIC_M : -2\hat l_M + \log n \mid{M}\mid$$, 
 
 where $$\hat l_M $$ is the maximized likelihood of the model $$M$$ and  $$\mid M \mid$$ is the number of parameters in the model $$M$$.  So the first term $$\hat l_M$$ indicates the goodness-of-fit of the model to the observed data and the second term penalizes the complexity of the model so that more complex model is less likely to be selected.
 
