--- a/_posts/2016-05-09-003803.markdown
+++ b/_posts/2016-05-09-003803.markdown
@@ -37,6 +37,6 @@ where $$\hat l_M $$ is the maximized likelihood of the model $$M$$ and  $$\mid M
 
   One thing we need to remark is that all the good properties about AIC and BIC only hold in low-dimensional settings ($$n>p$$). In high-dimensional settings, when $p$ grows with $$n$$,  none of AIC and BIC has strong enough penalty on the model complexity so the resulting model selection procedure is misleading; no model selection consistency and  no optimality of estimation and prediction. However, sadly again, some people just use AIC or BIC in high-dimensional settings. To overcome this issue, there are rich literatures for high-dimensional information criterion such as [Extended BIC (EBIC)](http://biomet.oxfordjournals.org/content/95/3/759.abstract), [Generalized IC (GIC)](http://biomet.oxfordjournals.org/content/95/3/759.abstract), [High-dimensional BIC (HBIC)](http://www.sciencedirect.com/science/article/pii/S0047259X11000455) . All of them have the same idea; the penalty on the model complexity should depend on the dimension $$p$$. Especially, $$\log p $$ term in the model complexity is important to prevent overfitting in high-dimensional models.
 
-Going back to the simple toy example introduced in the beginning of this article, the model which has the minimal criteria value can be choosen; first evaluate $$AIC_{M_1}$$, $$AIC_{M_2}$$, $$AIC_{M_3}$$, ... etc (if you use AIC) and choose the model which minimizes these values. So simple, huh? However, even when $$p$$ is moderate, say 40, so the number of total model is going to be $$2^40$$, it is computationally impossible to evaluate all possible models.
+Going back to the simple toy example introduced in the beginning of this article, the model which has the minimal criteria value can be choosen; first evaluate $$AIC_{M_1}$$, $$AIC_{M_2}$$, $$AIC_{M_3}$$, ... etc (if you use AIC) and choose the model which minimizes these values. So simple, huh? However, even when $$p$$ is moderate, say 40, so the number of total model is going to be $$2^{40}$$, it is computationally impossible to evaluate all possible models.
 Then, what should we do? I will discuss this issue later.
 
