--- a/_posts/2016-05-09-003803.markdown
+++ b/_posts/2016-05-09-003803.markdown
@@ -31,7 +31,7 @@ AIC and BIC of a model $$M$$ can be defined as
 
 where $$\hat l_M $$ is the maximized likelihood of the model $$M$$ and  $$\mid M \mid$$ is the number of parameters in the model $$M$$.  So the first term $$\hat l_M$$ indicates the goodness-of-fit of the model to the observed data and the second term penalizes the complexity of the model so that more complex model is less likely to be selected.
 
- AIC is a kind of asymptotic approximation of expected Kullback-Leibler (KL) divergence between the object model and the true model. So smaller, better. On the other hand, BIC is a little bit different. Even though its name contains "information criterion", strictly speaking it is not a information criteria. Usually, an information criteria refers to a measure of prediction performance, but BIC has nothing to do with any prediction point of view; BIC is an asymptotic approximation of  log marginal  likelihood of the given Bayesian model. So it does not make any sense to use BIC for simple Bayesian models with small sample size, since it is an approximation and what is the point of using approximations even when the exact forms are available?! Sadly, however,  some people use BIC for Bayesian models.
+ AIC is a kind of asymptotic approximation of expected Kullback-Leibler (KL) divergence between the object model and the true model. So smaller, better. On the other hand, BIC is a little bit different. Even though its name contains "information criterion", strictly speaking it is not an information criteria. Usually, an information criteria refers to a measure of prediction performance, but BIC has nothing to do with any prediction point of view; BIC is an asymptotic approximation of  log marginal  likelihood of the given Bayesian model. So it does not make any sense to use BIC for simple Bayesian models with small sample size, since it is an approximation and what is the point of using approximations even when the exact forms are available?! Sadly, however,  some people use BIC for Bayesian models.
 
   Theoretically, AIC and BIC have very different properties. It is well-known that  AIC is optimal in prediction and estimation sense under some models like linear models; see [Shibata (1981)](http://www.jstor.org/stable/2335804). Also [Shibata (1983)](http://link.springer.com/article/10.1007%2FBF02480998) provided some examples where BIC fails to achieve to optimal rate of convergence, while AIC does. However, AIC does not provide the model selection consistency, which means that the probability that the selected model by AIC is equivalent to the true model (or the closest model to the true model in KL divergence sense) does not converges to one, while BIC enjoys the model selection consistency. Since BIC is some approximation of Bayesian stuff, someone might think that  Bayesian model selection would be inferior to the model selection procedure by AIC. But as discussed in [Barbieri and Berger (2004)](http://arxiv.org/pdf/math/0406464.pdf#page29), it is wrong in a sense that BIC(or marginal likelihood) is not an appropriate criteria for prediction, but marginal inclusion probability; I will discuss the details in following posts.
 
