--- a/_posts/2016-05-09-003803.markdown
+++ b/_posts/2016-05-09-003803.markdown
@@ -33,7 +33,7 @@ where $$\hat l_M $$ is the maximized likelihood of the model $$M$$ and  $$\mid M
 
  AIC is a kind of asymptotic approximation of expected Kullback-Leibler (KL) divergence between the object model and the true model. So smaller, better. On the other hand, BIC is a little bit different. Even though its name contains "information criterion", strictly speaking it is not an information criteria. Usually, an information criteria refers to a measure of prediction performance, but BIC has nothing to do with any prediction point of view; BIC is an asymptotic approximation of  log marginal  likelihood of the given Bayesian model. So it does not make any sense to use BIC for simple Bayesian models with small sample size, since it is an approximation and what is the point of using approximations even when the exact forms are available?! Sadly, however,  some people use BIC for Bayesian models.
 
-  Theoretically, AIC and BIC have very different properties. It is well-known that  AIC is optimal in prediction and estimation sense under some models like linear models; see [Shibata (1981)](http://www.jstor.org/stable/2335804). Also [Shibata (1983)](http://link.springer.com/article/10.1007%2FBF02480998) provided some examples where BIC fails to achieve to optimal rate of convergence, while AIC does. However, AIC does not provide the model selection consistency, which means that the probability that the selected model by AIC is equivalent to the true model (or the closest model to the true model in KL divergence sense) does not converges to one, while BIC enjoys the model selection consistency. Since BIC is some approximation of Bayesian stuff, someone might think that  Bayesian model selection would be inferior to the model selection procedure by AIC in prediction. But as discussed in [Barbieri and Berger (2004)](http://arxiv.org/pdf/math/0406464.pdf#page29), it is wrong in a sense that BIC(or marginal likelihood) is not an appropriate criteria for prediction, but marginal inclusion probability is; I will discuss the details in following posts.
+  Theoretically, AIC and BIC have very different properties. It is well-known that  AIC is optimal in prediction and estimation sense under some models like linear models; see [Shibata (1981)](http://www.jstor.org/stable/2335804). Also [Shibata (1983)](http://link.springer.com/article/10.1007%2FBF02480998) provided some examples where BIC fails to achieve to optimal rate of convergence, while AIC does. However, AIC does not provide the model selection consistency, which means that the probability that the selected model by AIC is equivalent to the true model (or the closest model to the true model in KL divergence sense) does not converges to one, while BIC enjoys the model selection consistency. Since BIC is some approximation of Bayesian stuff, someone might think that  Bayesian model selection would be inferior to the model selection procedure by AIC in prediction. But as discussed in [Barbieri and Berger (2004)](http://arxiv.org/pdf/math/0406464.pdf#page29), it is wrong in a sense that BIC(or marginal likelihood) is not an appropriate criteria for prediction, but marginal inclusion probability is (I will discuss the details in following posts).
 
   One thing we need to remark is that all the good properties about AIC and BIC only hold in low-dimensional settings ($$n>p$$). In high-dimensional settings, when $$p$$ grows with $$n$$,  none of AIC and BIC has strong enough penalty on the model complexity so the resulting model selection procedure is misleading; no model selection consistency and  no optimality of estimation and prediction. However, sadly again, some people just use AIC or BIC in high-dimensional settings. To overcome this issue, there are rich literatures for high-dimensional information criterion such as [Extended BIC (EBIC)](http://biomet.oxfordjournals.org/content/95/3/759.abstract), [Generalized IC (GIC)](http://biomet.oxfordjournals.org/content/95/3/759.abstract), [High-dimensional BIC (HBIC)](http://www.sciencedirect.com/science/article/pii/S0047259X11000455). All of them have the same idea; the penalty on the model complexity should depend on the dimension $$p$$. Especially, $$\log p $$ term in the model complexity is important to prevent overfitting in high-dimensional models.
 
