--- a/_posts/2016-05-09-003803.markdown
+++ b/_posts/2016-05-09-003803.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Basics of  Model Selection: AIC and BIC" 
+title: "Basics of  Model Selection: Information Criterion" 
 tags: Bayesian model selection, shrinkage priors
 comments: true
 ---
