--- a/_posts/2016-04-28-new.md
+++ b/_posts/2016-04-28-new.md
@@ -5,13 +5,13 @@ tags: people
 comments: true
 ---
 
-   Last week I attended [a workshop](https://www.stat.tamu.edu/measurement-error-workshop/) about measurement error model and complex data, and I met two brilliant astromers: [Eric Feigelson](http://astro.psu.edu/people/e5f) and [Tom Loredo](http://www.astro.cornell.edu/staff/loredo/). Because their hotel was closed to my home, we could have some deep conversation while walking to their hotel for about 40 minutes.
+   Last week I attended [a workshop](https://www.stat.tamu.edu/measurement-error-workshop/) about measurement error models and complex data, and I met two brilliant astromers: [Eric Feigelson](http://astro.psu.edu/people/e5f) and [Tom Loredo](http://www.astro.cornell.edu/staff/loredo/). Because their hotel was closed to my home, we were able to have some deep conversation while walking to their hotel for about 40 minutes.
 
-  Tom had very good insight in statistics, so when I first met him I thought he was a statistics professor. I surprised that he knew a lot of Bayesian statistics, and at some part he had deeper intuition than mine (maybe not surprising :-) ). He said that to his best knowledge his Ph. d. dissertation was the first attempt to introduce Bayesian statistics to astronomy, beside Laplace's (300 years ago!). We didn't have enough time to discuss details about his current work, because Eric started an interesting history lecture. 
+ As Tom had very good insight into statistics, when I first met him I thought he was a statistics professor. I was surprised that he knew a lot about Bayesian statistics, and in some ways he had deeper intuition than mine (maybe not surprising :-) ). He said that to his best knowledge his Ph. d. dissertation was the first attempt to introduce Bayesian statistics to astronomy, beside Laplace's (300 years ago!). We didn't have enough time to discuss details about his current work because Eric started an interesting history lecture. 
 
-  Eric is jewish, and he started talking about a jewish history when I asked him why european people so hated jewish people. His story was going back to the era of Jesus and he described Jesus very differently from what I had heard from christion people; I attended a christian church for a few month, and the christians said that Jesus is the savior and he sacrificed himself to unsin us. But, he said that Jesus was not a savior and it is wrong to say that jews sold him to the Rome. It was an interesting point of view, although my christian wife would've been upset if she were there (she got baptized last year). 
+  Eric is Jewish, and he started talking about jewish history when I asked him why european people  hated Jewish people so much. His story went back to the era of Jesus and he described Jesus very differently from what I had heard from Christian people. I attended a Christian church for a few months, and the Christians said that Jesus is the savior and he sacrificed himself to compensate for our sins. However, he said that Jesus was not a savior and it is wrong to say that Jews sold him to the Romans. It was an interesting point of view, although my Christian wife would've been upset if she were there (she got baptized last year). 
 
-  One interesting thing on Eric was that he had a very strong identity as being a jewish, even though  not only he was not born in Israel, but he also had not been in Islael before. He also knew a lot of history at an expert level.  I am a korean and I have also a strong identity as a korean, because I was born in South Korea and I lived there for 26 years. But I am not sure that my descendants after 10 generations would have the identity, and even I am not sure about my daughter to have the identity if she grows up in america! Jewish people are interesting.    
+  One interesting thing about Eric was that he had a very strong identity as being a Jewish, even though  not only was he not born in Israel, but he also had not been to Islael before. He also knew a lot of history at an expert level. I am a Korean and I have also a strong identity as a Korean, because I was born in South Korea and I lived there for 26 years. But I am not sure that my descendants after 10 generations would have that identity, and even I am not sure about my daughter to have that identity if she grows up in America! Jewish people are interesting.    
 
 
 
