--- a/_posts/2016-06-14-213921.markdown
+++ b/_posts/2016-06-14-213921.markdown
@@ -45,9 +45,7 @@ $$
 Then, it is sufficient to show that i) $$\sum_{ {\bf k} : {\bf  t} \subset {\bf k} } \frac{m_{\bf k}(y)\pi({\bf k})}{m_{\bf t}(y)\pi({\bf t})}\overset{p}{\to}0$$ and ii) $$\sum_{ {\bf k} : {\bf  t} \not\subset {\bf k} } \frac{m_{\bf k}(y)\pi({\bf k})}{m_{\bf t}(y)\pi({\bf t})}\overset{p}{\to}0$$. The second one (under-fitting models case) is relatively easy to show, because models that miss any important variables will be exponentially penalized. Therefore, we focus on the first statement regarding over-fitting models. The commonly used technique is following as 
 
 $$\begin{eqnarray*}
-P\left[ \sum_{ {\bf k}:{\bf t} \subset {\bf k} }\frac{m_{\bf k}(y)\pi({\bf k})}{m_{\bf t}(y)\pi({\bf t})} >\epsilon \mid y \right] &approx& P\left[ \sum_{{\bf k}:{\bf t} \subset {\bf k}}p^{-\lambda(|{\bf k}| -|{\bf t}| )}\tau^{-(|{\bf k}| -|{\bf t}| )}\left\{\frac{X_{\bf k}^TX_{\bf k}+1/\tau^2I}{X_{\bf t}^TX_{\bf t}+1/\tau^2I}\right\}^{-1/2}\exp\{y^T(P_{\bf k}-P_{\bf t})y/(2\sigma^2) \} >\epsilon \mid y \right]\\
-&=&  P\left[ \sum_{d=1}^{p-|{\bf t}|}\sum_{{\bf k}:{\bf t} \subset{\bf k}&|{\bf t} \setminus{\bf k}|=d} p^{-\lambda d}\tau^{-d}\left\{\frac{X_{\bf k}^TX_{\bf k}+1/\tau^2I}{X_{\bf t}^TX_{\bf t}+1/\tau^2I}\right\}^{-1/2} \exp\{y^T(P_{\bf k}-P_{\bf t})y/(2\sigma^2) \} >\epsilon \mid y \right]\\
- &\leq& \sum_{d=1}^{p-|{\bf t}|} P\left[  \sum_{{\bf k}:{\bf t} \subset{\bf k}&|{\bf t} \setminus{\bf k}|=d} p^{-\lambda d}\tau^{-d} \left\{\frac{X_{\bf k}^TX_{\bf k}+1/\tau^2I}{X_{\bf t}^TX_{\bf t}+1/\tau^2I}\right\}^{-1/2} \exp\{y^T(P_{\bf k}-P_{\bf t})y/(2\sigma^2) \}  > \epsilon/(p-|{\bf t}|) \mid y \right],
+P\left[ \sum_{ {\bf k}:{\bf t} \subset {\bf k} }\frac{m_{\bf k}(y)\pi({\bf k})}{m_{\bf t}(y)\pi({\bf t})} >\epsilon \mid y \right] &approx& P\left[ \sum_{{\bf k}:{\bf t} \subset {\bf k}}p^{-\lambda(|{\bf k}| -|{\bf t}| )}\tau^{-(|{\bf k}| -|{\bf t}| )}\left\{\frac{X_{\bf k}^TX_{\bf k}+1/\tau^2I}{X_{\bf t}^TX_{\bf t}+1/\tau^2I}\right\}^{-1/2}\exp\{y^T(P_{\bf k}-P_{\bf t})y/(2\sigma^2) \} >\epsilon \mid y \right]
  \end{eqnarray*} 
  $$
 where $$P_{\bf k}$$ is the projection matrix of $$X_{\bf k}$$. The proof will be completed, if we can show that 
