--- a/_posts/2016-06-14-213921.markdown
+++ b/_posts/2016-06-14-213921.markdown
@@ -59,5 +59,4 @@ P\left[  \sum_{ {\bf k} : {\bf t} \subset{\bf k} \& | {\bf k} \setminus {\bf t} 
 $$
 
 
- Under some eigenvalue conditions on the gram matrix $$X_{ {\bf k} }^TX_{ {\bf k} }$$ for any arbitrary model $${\bf k}$$, the ratio of the determinants has a polynomial rate of $$n$$, which does not influence much under high-dimensional settings where $$p$$ increases much faster than $$n$$, so we ignore the term. Also, as $$\exp\{y^T(P_{\bf k}-P_{\bf t})y/\sigma^2 \} \sim \chi_{ \vert {\bf k} \vert -  \vert {\bf t} \vert }$$ when $${ {\bf t} \subset {\bf k} }$$. The resulting quanty can be expressed as
- 
+ Under some eigenvalue conditions on the gram matrix $$X_{ {\bf k} }^T X_{ {\bf k} }$$ for any arbitrary model $${\bf k}$$, the ratio of the determinants has a polynomial rate of $$n$$, which does not influence much under high-dimensional settings where $$p$$ increases much faster than $$n$$, 
