--- a/_posts/2016-06-14-213921.markdown
+++ b/_posts/2016-06-14-213921.markdown
@@ -59,5 +59,13 @@ $$
 P\left[  \sum_{ {\bf k} : {\bf t} \subset{\bf k} \& | {\bf k} \setminus {\bf t} | = d } p^{-\lambda d}\tau^{-d} \left\{\frac{X_{\bf k}^TX_{\bf k}+1/\tau^2I}{X_{\bf t}^TX_{\bf t}+1/\tau^2I}\right\}^{-1/2} \exp\{y^T(P_{\bf k}-P_{\bf t})y/(2\sigma^2) \}  > \epsilon/(p-|{\bf t}|) \mid y \right]\prec p^{-1}.
 $$
 
-Under some eigenvalue conditions on the gram matrix $$X_{\bf k}^TX_{\bf k}$$ for any arbitrary model $${\bf k}$$, the ratio of the determinants has a polynomial rate of $$n$$, which does not influence much under high-dimensional settings where $$p$$ increases much faster than $$n$$, so we ignore the term. Also, as $$\exp\{y^T(P_{\bf k}-P_{\bf t})y/\sigma^2 \} \sim \chi_{ \vert {\bf k} \vert -  \vert {\bf t} \vert }$$ when $${ {\bf t} \subset {\bf k} }$$. The resulting quanty can be expressed as
+Under some eigenvalue conditions on the gram matrix $$X_{\bf k}^TX_{\bf k}$$ for any arbitrary model $${\bf k}$$, the ratio of the determinants has a polynomial rate of $$n$$, which does not influence much under high-dimensional settings where $$p$$ increases much faster than $$n$$, so we ignore the term. Also, as $$\exp\{y^T(P_{\bf k}-P_{\bf t})y/\sigma^2 \} \sim \chi_{ \vert {\bf k} \vert -  \vert {\bf t} \vert }^2$$ when $${ {\bf t} \subset {\bf k} }$$. The resulting quanty can be expressed as
+ 
+ 
+ 
+ $$\begin{eqnarray*}
+ P\left[  \sum_{{\bf k}:{\bf t} \subset{\bf k}&|{\bf t} \setminus{\bf k}|=d} p^{-\lambda d}\tau^{-d} \exp\{y^T(P_{\bf k}-P_{\bf t})y/(2\sigma^2) \}  > \epsilon/(p-|{\bf t}|) \mid y \right]\\
+ &\leq& \choose{p-|{\bf t}|}{d}p^{-\lambda d}\tau^{-d} \exp\{W/2 \}  > \epsilon/(p-|{\bf t}|)/\choose{p-|{\bf t}|}{d}p^{-\lambda d} \mid y \right],
+ \end{eqnarray*}
+ $$
  
